# wc2026brief

./: .env.example  .gitignore  Makefile  index.html  package-lock.json  package.json  vite.config.js
.claude/.skills/conduit/: SKILL.md
.github/workflows/: publish.yml  test.yml  update-stats.yml
backend/: backfill_history.py  pyproject.toml
backend/src/wc2026brief/: __main__.py  config.py  fetcher.py  models.py
backend/src/wc2026brief/prompts/: agent_instructions.md
backend/tests/: test_fetcher.py
data/: history.json  squads.json  stats.json  stats_prev.json
src/: App.svelte  BumpChart.svelte  KnockoutBracket.svelte  app.css  simulation.js
