[project]
name = "wc2026brief-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.99.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
wc2026brief = "wc2026brief.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026brief"]

[tool.hatch.build.targets.wheel.force-include]
"src/wc2026brief/prompts" = "wc2026brief/prompts"

[tool.pytest.ini_options]
testpaths = ["tests"]
